fixed left margin on settings-form for better alignment

--- a/assets/styles/settings.sass
+++ b/assets/styles/settings.sass
@@ -1,6 +1,6 @@
 #settings
   .settings-form
-    margin: 30px
+    margin: 30px 0 30px 0
 
     p.short-settings-element
       display: inline-block
